fixed service details and profile page margin bottom to not overlap with footer

--- a/react-app/src/components/ServiceDetails/ServiceDetails.css
+++ b/react-app/src/components/ServiceDetails/ServiceDetails.css
@@ -3,6 +3,7 @@
     font: 400 16px/24px "Macan","Helvetica Neue",Helvetica,Arial,sans-serif;
     display: flex;
     flex-direction: row;
+    margin-bottom: 5%;
 }
 .details-title{
     font-size: 30px;
